test/patterns/s0299_bulls_and_cows/hafis/starchat/syntax_checking.txt
./test/s0299_bulls_and_cows/hafis/starchat/build/Solution.java:13: error: bad operand types for binary operator '>='
//@ ensures((\result >= 0) && (\result <= secret.length()));
                     ^
  first type:  java.lang.String
  second type: int
./test/s0299_bulls_and_cows/hafis/starchat/build/Solution.java:13: error: bad operand types for binary operator '<='
//@ ensures((\result >= 0) && (\result <= secret.length()));
                                       ^
  first type:  java.lang.String
  second type: int
2 errors
